# Skynet-Roomba

./: .gitignore  LICENSE  README.md  evaluate.py  main.py  ppo.py  pyproject.toml  requirements.txt  test_ckpt.pt  train.py  utils.py  watch.py
data/: bc_data_127.pkl  bc_data_131.pkl  bc_data_148.pkl  bc_data_159.pkl  bc_data_165.pkl  bc_data_166.pkl  bc_data_172.pkl  bc_data_181.pkl  bc_data_197.pkl  bc_data_220.pkl  bc_data_228.pkl  bc_data_273.pkl  bc_data_293.pkl  bc_data_299.pkl  bc_data_330.pkl  bc_data_362.pkl  bc_data_365.pkl  bc_data_506.pkl  bc_data_763.pkl  bc_data_953.pkl  bc_data_978.pkl
environments/: mujoco_env.py  sumo.py  sumo_v1.py  sumo_v2.py  sumo_v3.py  wrappers.py
environments/assets/: roomba_v1.xml  roomba_v2.xml  roomba_v3.xml  roomba_v4.xml  roomba_v5.xml  roomba_v6.xml  roomba_v7.xml  sumo.xml
environments/roomba/: bump_range_cliff_v1.xml  bump_range_v1.xml  bump_v1.xml  uwb_v1.xml
environments/roomba/common/: assets_defaults.xml  octagon.stl
models/: base.py  helper.py  lstm.py  mlp.py
notebooks/: 02_connect_to_roomba.ipynb
pico/: README.md  constants.py  main.py
roomba/: clone.py  evaluate_lstm.py  train.py  train_lstm.py  utils.py  watch.py  watch_lstm.py
roomba/environments/: README.md  mujoco_env.py  sumo_v1.py  wrappers.py
roomba/example/: test_ckpt.pt
roomba/models/: base.py  helper.py  lstm.py  mlp.py
roomba/server/: constants.py  helper.py  joystick.py  neural.py  state_buffer.py
server/: README.md  constants.py  helper.py  joystick.py  neural.py  position_buffer.py  ps4_keys.json  state_buffer.py  udp_server.py
(+4 files in other folders)
